feature/translation-history

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=translationapp
 spring.cloud.gcp.project-id=inner-period-422220-k8
+spring.datasource.url=jdbc:sqlserver://translator-database:1433;databaseName=translator;encrypt=true;trustServerCertificate=true;
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.username=SA
+spring.datasource.password=STRONG@PASSWORD123
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
